Moved METASIM library to build/lib folder

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,11 @@
-cmake_minimum_required (VERSION 2.6)
-project (metasim)
+cmake_minimum_required (VERSION 3.0)
+project (METASIM)
 
 # Include dirs.
 add_subdirectory (src)
 add_subdirectory (examples)
 add_subdirectory (test)
+
+# Export.
+export(TARGETS METASIM FILE "./METASIMConfig.cmake")
+export(PACKAGE METASIM)
