--- a/examples/markov/CMakeLists.txt
+++ b/examples/markov/CMakeLists.txt
@@ -5,4 +5,4 @@ include(${CMAKE_CURRENT_DOURCE_DIR}../common_settings.txt)
 add_executable(markov markov.cpp)
 
 # Indicate that the executable needs metasim library.
-target_link_libraries( markov metasim )
+target_link_libraries(markov METASIM)
