--- a/examples/eth/CMakeLists.txt
+++ b/examples/eth/CMakeLists.txt
@@ -1,9 +1,9 @@
-# Include Environment-based settings.
-include(${CMAKE_CURRENT_DOURCE_DIR}../common_settings.txt)
+project(ETHERNET)
 
 # Create the executable.
-add_executable(eth example.cpp link.cpp	link.hpp message.cpp message.hpp netinterface.cpp
+add_executable(${PROJECT_NAME}
+	example.cpp link.cpp link.hpp message.cpp message.hpp netinterface.cpp
 	netinterface.hpp node.cpp node.hpp)
 
 # Indicate that the executable needs metasim library.
-target_link_libraries(eth METASIM)
+target_link_libraries(${PROJECT_NAME} ${METASIM_LIB_NAME}_STATIC)
