--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,18 +1,11 @@
-# Add include directory
-include_directories(.)
-include_directories("${PROJECT_SOURCE_DIR}/include")
+project(TESTS)
 
-# Environment-based settings.
-if(APPLE)
-	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++0x")
-elseif(UNIX)
-	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++0x")
-elseif(WIN32)
-
-endif()
+include_directories(".")
 
 # Create the executable.
-add_executable(test_metasim myentity.cpp TestEntityOrder.cpp TestEntitySameName.cpp TestParseUtil.cpp TestTick.cpp)
+add_executable(${PROJECT_NAME}
+	myentity.cpp TestEntityOrder.cpp TestEntitySameName.cpp TestParseUtil.cpp
+	TestTick.cpp)
 
 # Indicate that rtlib need metasim library.
-target_link_libraries(test_metasim METASIM)
+target_link_libraries(${PROJECT_NAME} ${METASIM_LIB_NAME}_STATIC)
